# django_mysite

./: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
mysite/shopapp/: models.py
mysite/shopapp/migrations/: 0011_alter_product_description_alter_product_name.py  0012_alter_product_description.py
